--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,3 +29,11 @@ thiserror = "1.0.44"
 tokio = {version = "1.29.1", features = ["full"]}
 tokio-tungstenite = {version = "0.20.0", features = ["native-tls"]}
 uuid = {version = "1.6.1", features = ["v4"]}
+
+[dev-dependencies]
+criterion = "0.5.1"
+dotenv = "0.15.0"
+
+[[bench]]
+name = "client_performance"
+harness = false
